[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "pyTibber"
license = "GPL-3.0-or-later"
description = "A python3 library to communicate with Tibber"
readme = "README.md"
authors = [{ name = "Daniel Hjelseth Hoyer", email = "mail@dahoiv.net" }]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.0.6",
  "gql==3.5.0",
  "websockets>=14.0.0",
]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/Danielhiversen/pyTibber"

[tool.setuptools.dynamic]
version = { attr = "tibber.const.__version__"}

[tool.setuptools.packages.find]
include = ["tibber*"]

[tool.mypy]
python_version = "3.12"
disallow_incomplete_defs = true
implicit_optional = true
strict_optional = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["D", "EM", "FBT", "PLR0913", "C901", "S101", "S105", "TRY"]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["tibber", "test"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D100"]
"test/**/*" = [
  "ANN201",
  "PLR2004",
  "S101",
  "S106",
]
