[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "pyTibber"
license = "GPL-3.0-or-later"
description = "A python3 library to communicate with Tibber"
readme = "README.md"
authors = [{ name = "Daniel Hjelseth Hoyer", email = "mail@dahoiv.net" }]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.0.6",
  "gql>=4.0.0",
  "websockets>=14.0.0",
]
dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/Danielhiversen/pyTibber"

[dependency-groups]
dev = [
  # Pin below 1.20.0 until the current mypy incompatibility is resolved.
  "mypy==1.19.1",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.11",
]

[tool.setuptools.dynamic]
version = { attr = "tibber.const.__version__"}

[tool.setuptools.packages.find]
include = ["tibber*"]

[tool.mypy]
python_version = "3.12"
disallow_incomplete_defs = true
implicit_optional = true
strict_optional = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.coverage]
run.branch = true
paths.source = [
  "tibber",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "def __repr__",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  "raise RuntimeError",
  'if __name__ == "__main__":',
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["D", "EM", "FBT", "PLR0913", "C901", "S101", "S105", "TRY"]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["tibber", "test"]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D100"]
"test/**/*" = [
  "ANN201",
  "PLR2004",
  "S101",
  "S106",
]
